--- a/index.html
+++ b/index.html
@@ -140,6 +140,6 @@
       </aside>
     </main>
 
-    <script type="module" src="./src/main.ts"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
