--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         width: min(960px, 100%);
         display: grid;
         gap: 24px;
-        grid-template-columns: 2fr 1fr;
+        grid-template-columns: 1.1fr 1fr;
         align-items: start;
         background: rgba(9, 12, 18, 0.75);
         backdrop-filter: blur(12px);
@@ -104,7 +104,9 @@
         font-family: "JetBrains Mono", "Fira Mono", monospace;
         font-size: 0.75rem;
         color: #8da2cb;
-        min-height: 64px;
+        min-height: 220px;
+        max-height: 220px;
+        overflow-y: auto;
         white-space: pre-wrap;
       }
 
