experimental feature: drag-n-drop complete

--- a/index.html
+++ b/index.html
@@ -128,6 +128,74 @@
       .secondary-button:hover {
         background: rgba(65, 102, 245, 0.28);
         color: #fff;
+        box-shadow: 0 8px 18px rgba(66, 104, 244, 0.25);
+      }
+
+      .reel-inspector-column {
+        padding: 6px;
+        border-radius: 10px;
+        background: rgba(19, 26, 39, 0.65);
+      }
+
+      .reel-inspector-column.draggable {
+        cursor: grab;
+        transition: transform 120ms ease, box-shadow 120ms ease;
+      }
+
+      .reel-inspector-column.draggable:active {
+        cursor: grabbing;
+      }
+
+      .reel-inspector-column.draggable:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 6px 18px rgba(18, 24, 36, 0.45);
+      }
+
+      .reel-inspector-header {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 8px;
+        margin-bottom: 8px;
+      }
+
+      .reel-inspector-title {
+        font-weight: 600;
+        font-size: 0.9rem;
+        color: #fff;
+      }
+
+      .drag-handle {
+        font-size: 0.75rem;
+        letter-spacing: 0.2em;
+        opacity: 0.6;
+        cursor: grab;
+      }
+
+      .reel-inspector-body.draggable {
+        cursor: grab;
+      }
+
+      .reel-inspector-body.draggable:active {
+        cursor: grabbing;
+      }
+
+      .reel-inspector-body.draggable > div {
+        cursor: grab;
+      }
+
+      .reel-inspector-body.draggable > div:active {
+        cursor: grabbing;
+      }
+
+      .reel-inspector-column.draggable .drag-handle:hover {
+        opacity: 1;
+      }
+
+      .reel-inspector-column:not(.draggable) .drag-handle {
+        cursor: default;
+        opacity: 0.35;
       }
 
       #debug {
