bugfix: double buttons

--- a/index.html
+++ b/index.html
@@ -125,15 +125,14 @@
       }
 
       .secondary-button {
-        background: rgba(65, 102, 245, 0.18);
-        color: #8da2cb;
+        background: linear-gradient(120deg, #4166f5, #7b3ef7);
+        color: #fff;
         border: 1px solid rgba(125, 148, 233, 0.45);
       }
 
       .secondary-button:hover {
-        background: rgba(65, 102, 245, 0.28);
-        color: #fff;
-        box-shadow: 0 8px 18px rgba(66, 104, 244, 0.25);
+        transform: translateY(-1px);
+        box-shadow: 0 8px 20px rgba(66, 104, 244, 0.35);
       }
 
       .reel-inspector-column {
@@ -274,8 +273,6 @@
               <button id="spin">Spin</button>
             </div>
           </div>
-          <button id="spin">Spin</button>
-          <button id="lock-order" class="secondary-button">Lock Order</button>
         </div>
       </section>
 
