--- a/index.html
+++ b/index.html
@@ -1,10 +1,384 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Reelbound Spike</title>
+    <style>
+      :root {
+        color-scheme: dark;
+        font-family: "Courier New", Courier, monospace;
+        --crt-green: #6df977;
+        --crt-amber: #ffcb6c;
+        --glass-glow: rgba(115, 255, 155, 0.2);
+      }
+
+      * {
+        box-sizing: border-box;
+      }
+
+      body {
+        margin: 0;
+        height: 100vh;
+        background:
+          radial-gradient(circle at 20% 20%, rgba(100, 255, 150, 0.08), transparent 55%),
+          radial-gradient(circle at 80% 30%, rgba(255, 160, 70, 0.1), transparent 60%),
+          #050505;
+        color: var(--crt-green);
+      }
+
+      .desktop-grid {
+        height: 100%;
+        width: 100%;
+        padding: 28px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 28px;
+      }
+
+      .crt-quadrant {
+        grid-area: 1 / 1 / 2 / 2;
+        display: flex;
+        align-items: stretch;
+        justify-content: stretch;
+      }
+
+      .crt {
+        position: relative;
+        background: #001100;
+        border-radius: 18px;
+        padding: 28px 32px 36px;
+        box-shadow:
+          0 0 40px rgba(0, 255, 120, 0.25),
+          0 0 120px rgba(255, 180, 70, 0.12),
+          inset 0 0 18px rgba(0, 30, 0, 0.8),
+          inset 0 0 0 2px rgba(0, 120, 40, 0.4);
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+      }
+
+      .crt::before,
+      .crt::after {
+        content: "";
+        pointer-events: none;
+        position: absolute;
+        inset: 0;
+      }
+
+      .crt::before {
+        background:
+          repeating-linear-gradient(
+            to bottom,
+            rgba(0, 0, 0, 0.15),
+            rgba(0, 0, 0, 0.15) 2px,
+            transparent 2px,
+            transparent 4px
+          );
+        mix-blend-mode: multiply;
+        opacity: 0.45;
+      }
+
+      .crt::after {
+        background:
+          radial-gradient(circle at 50% 20%, rgba(200, 255, 220, 0.14), transparent 55%);
+        opacity: 0.9;
+      }
+
+      .crt-screen {
+        position: relative;
+        display: grid;
+        grid-template-rows: auto 1fr auto;
+        gap: 16px;
+        width: 100%;
+        height: 100%;
+        text-shadow: 0 0 6px rgba(110, 255, 120, 0.6);
+      }
+
+      header {
+        display: flex;
+        align-items: baseline;
+        justify-content: space-between;
+        letter-spacing: 0.08em;
+        text-transform: uppercase;
+        border-bottom: 1px solid rgba(110, 255, 120, 0.4);
+        padding-bottom: 6px;
+      }
+
+      header span {
+        color: var(--crt-amber);
+      }
+
+      main {
+        display: grid;
+        grid-template-columns: 1fr 220px;
+        gap: 20px;
+        align-items: start;
+        overflow: hidden;
+      }
+
+      .grid-panel {
+        position: relative;
+        background: rgba(0, 30, 0, 0.6);
+        border: 1px solid rgba(80, 255, 120, 0.5);
+        border-radius: 6px;
+        padding: 12px;
+        min-height: 240px;
+      }
+
+      .grid-panel::after {
+        content: "debug grid";
+        position: absolute;
+        top: -11px;
+        left: 12px;
+        padding: 0 6px;
+        font-size: 12px;
+        background: #001100;
+        color: rgba(180, 255, 190, 0.7);
+      }
+
+      .grid {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 8px;
+        min-height: 100%;
+      }
+
+      .grid-cell {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 14px 0;
+        border-radius: 4px;
+        background: rgba(0, 40, 0, 0.85);
+        border: 1px solid rgba(90, 255, 140, 0.35);
+        box-shadow: inset 0 0 8px rgba(0, 40, 0, 0.8);
+        font-size: 14px;
+      }
+
+      aside {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+        background: rgba(10, 35, 10, 0.75);
+        border: 1px solid rgba(120, 255, 150, 0.4);
+        border-radius: 6px;
+        padding: 12px;
+      }
+
+      .status-item {
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+      }
+
+      .status-item label {
+        font-size: 12px;
+        color: rgba(160, 255, 200, 0.7);
+      }
+
+      footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-top: 1px solid rgba(110, 255, 120, 0.4);
+        padding-top: 10px;
+      }
+
+      .controls {
+        display: flex;
+        gap: 12px;
+      }
+
+      button {
+        background: rgba(0, 140, 70, 0.8);
+        border: 1px solid rgba(140, 255, 190, 0.7);
+        border-radius: 4px;
+        padding: 8px 18px;
+        color: var(--crt-green);
+        font-family: inherit;
+        font-size: 14px;
+        letter-spacing: 0.07em;
+        text-transform: uppercase;
+        cursor: pointer;
+        box-shadow: 0 0 12px rgba(110, 255, 120, 0.45);
+        transition: transform 0.1s ease, box-shadow 0.1s ease;
+      }
+
+      button:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 0 16px rgba(200, 255, 200, 0.5);
+      }
+
+      button:active {
+        transform: translateY(0);
+        box-shadow: 0 0 8px rgba(90, 255, 150, 0.4);
+      }
+
+      .console-quadrant {
+        grid-area: 1 / 2 / 2 / 3;
+        background: rgba(5, 25, 10, 0.9);
+        border-radius: 16px;
+        border: 1px solid rgba(100, 255, 160, 0.3);
+        box-shadow:
+          0 0 35px rgba(40, 200, 120, 0.25),
+          inset 0 0 12px rgba(0, 40, 0, 0.8);
+        padding: 24px;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .console-heading {
+        display: flex;
+        align-items: baseline;
+        justify-content: space-between;
+        margin-bottom: 12px;
+        letter-spacing: 0.06em;
+        text-transform: uppercase;
+        color: var(--crt-amber);
+      }
+
+      .console-heading span {
+        font-size: 12px;
+        color: rgba(180, 240, 200, 0.7);
+      }
+
+      .console-output {
+        flex: 1;
+        background: rgba(0, 15, 0, 0.85);
+        border: 1px solid rgba(110, 255, 170, 0.25);
+        border-radius: 8px;
+        padding: 18px;
+        font-size: 13px;
+        line-height: 1.4;
+        overflow-y: auto;
+        box-shadow: inset 0 0 14px rgba(0, 40, 0, 0.9);
+      }
+
+      .console-output pre {
+        margin: 0;
+        white-space: pre-wrap;
+        word-break: break-word;
+      }
+
+      .console-output code {
+        color: var(--crt-green);
+      }
+
+      .console-action-row {
+        margin-top: 12px;
+        display: flex;
+        justify-content: flex-end;
+      }
+
+      .console-action-row button {
+        background: rgba(0, 90, 50, 0.8);
+        border: 1px solid rgba(110, 255, 180, 0.4);
+        padding: 6px 14px;
+        font-size: 12px;
+        letter-spacing: 0.06em;
+        box-shadow: 0 0 10px rgba(80, 220, 140, 0.35);
+      }
+
+      .desktop-grid::after {
+        content: "";
+        grid-area: 2 / 1 / 3 / 3;
+        border-radius: 22px;
+        border: 1px dashed rgba(100, 255, 170, 0.2);
+        background: rgba(0, 20, 0, 0.35);
+      }
+
+      .scan-overlay {
+        pointer-events: none;
+        position: absolute;
+        inset: 0;
+        background: linear-gradient(to top, transparent 0%, rgba(255, 255, 255, 0.12) 2%, transparent 4%);
+        opacity: 0.22;
+        mix-blend-mode: screen;
+        animation: scan 4s linear infinite;
+      }
+
+      @keyframes scan {
+        from {
+          transform: translateY(-100%);
+        }
+        to {
+          transform: translateY(100%);
+        }
+      }
+
+      canvas {
+        display: none;
+      }
+    </style>
   </head>
-  <body style="background:#111;color:#eee">
+  <body>
+    <div class="desktop-grid">
+      <section class="crt-quadrant">
+        <div class="crt">
+          <div class="scan-overlay"></div>
+          <div class="crt-screen">
+            <header>
+              <strong>Reelbound Spike</strong>
+              <span>Session Monitor</span>
+            </header>
+            <main>
+              <section class="grid-panel">
+                <div id="grid" class="grid" aria-live="polite">
+                  <div class="grid-cell">--</div>
+                  <div class="grid-cell">--</div>
+                  <div class="grid-cell">--</div>
+                  <div class="grid-cell">--</div>
+                  <div class="grid-cell">--</div>
+                  <div class="grid-cell">--</div>
+                  <div class="grid-cell">--</div>
+                  <div class="grid-cell">--</div>
+                  <div class="grid-cell">--</div>
+                  <div class="grid-cell">--</div>
+                </div>
+              </section>
+
+              <aside>
+                <div class="status-item">
+                  <label>Spin State</label>
+                  <output id="spin-state">idle</output>
+                </div>
+                <div class="status-item">
+                  <label>Next Stop</label>
+                  <output id="next-stop">--</output>
+                </div>
+                <div class="status-item">
+                  <label>Elapsed</label>
+                  <output id="elapsed">0.000 s</output>
+                </div>
+              </aside>
+            </main>
+
+            <footer>
+              <div class="controls">
+                <button type="button" id="btn-spin">Begin Spin</button>
+                <button type="button" id="btn-stop">Trigger Stop</button>
+              </div>
+              <small>Press space to stop, enter to spin</small>
+            </footer>
+          </div>
+        </div>
+      </section>
+
+      <section class="console-quadrant" aria-labelledby="console-title">
+        <div class="console-heading">
+          <strong id="console-title">Debug Console</strong>
+          <span>retained log</span>
+        </div>
+        <div class="console-output">
+          <pre id="debug-log">[ 00:00.000 ] Console ready...</pre>
+        </div>
+        <div class="console-action-row">
+          <button type="button" id="console-clear">Clear Log</button>
+        </div>
+      </section>
+    </div>
+
     <canvas id="c" width="256" height="192"></canvas>
     <script type="module" src="/spike/main.ts"></script>
   </body>
